# fastapi-outbox-database-transaction

./: .editorconfig  .env.dist  .gitignore  .python-version  Dockerfile  Makefile  app.py  debezium.py  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 32ae9302f519_.py  8dbcd58794d0_initial.py
conf/: applications.properties
src/: app.py  requirements.txt
